# libmtag

./: .gitignore  ChangeLog  Makefile  Makefile.am  NEWS  README  configure.ac  libmtag.pc.in
lib/: Makefile.am  mtag.cpp  mtag.h
src/: Makefile.am  mtag.c
tests/: Makefile.am  reader.c
